# Personal-Projects

./: .gitignore  README.md
Local_Chatbot/: .gitignore  README.md  docker-compose.yml
Local_Chatbot/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
Local_Chatbot/backend/alembic/: env.py
Local_Chatbot/backend/alembic/versions/: 20260424_0001_initial_schema.py  20260424_0002_add_source_document_routing_preview.py
Local_Chatbot/backend/app/: __init__.py  main.py
Local_Chatbot/backend/app/api/: deps.py  router.py
Local_Chatbot/backend/app/api/v1/: api.py
Local_Chatbot/backend/app/api/v1/endpoints/: chat.py  knowledge.py
Local_Chatbot/backend/app/core/: __init__.py  config.py  lifespan.py
Local_Chatbot/backend/app/db/: base.py  session.py
Local_Chatbot/backend/app/db/models/: __init__.py  chat.py  knowledge.py
Local_Chatbot/backend/app/modules/rag/: __init__.py  errors.py  loaders.py  providers.py  vector_store.py
Local_Chatbot/backend/app/modules/rag/graph/: __init__.py  builder.py  state.py
Local_Chatbot/backend/app/schemas/: __init__.py  chat.py  knowledge.py
Local_Chatbot/backend/app/services/: chat_service.py  knowledge_service.py
Local_Chatbot/docs/: architecture.md
Local_Chatbot/frontend/: Dockerfile  package.json
Trust_System/: README.md  docker-compose.yml
Trust_System/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  requirements.txt
Trust_System/backend/alembic/: env.py  script.py.mako
Trust_System/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+70 files in other folders)
