[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-chatbot-backend"
version = "0.1.0"
description = "FastAPI + LangGraph RAG backend for Local_Chatbot."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.3,<0.136.0",
  "uvicorn[standard]>=0.43.0,<0.44.0",
  "pydantic-settings>=2.12.0,<3.0.0",
  "sqlalchemy>=2.0.49,<2.1.0",
  "alembic>=1.18.4,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "psycopg[binary,pool]>=3.2.0,<4.0.0",
  "httpx>=0.28.1,<0.29.0",
  "python-multipart>=0.0.20,<0.1.0",
  "langchain>=1.2.15,<2.0.0",
  "langchain-openai>=1.1.13,<2.0.0",
  "langchain-qdrant>=1.1.0,<2.0.0",
  "langchain-text-splitters>=1.1.2,<2.0.0",
  "langgraph>=1.1.6,<2.0.0",
  "langgraph-checkpoint-postgres>=3.0.5,<4.0.0",
  "qdrant-client>=1.17.1,<2.0.0",
  "pypdf>=5.4.0,<6.0.0",
  "greenlet>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

